[gd_scene load_steps=41 format=2]

[ext_resource path="res://addons/analog_controller/analog.gd" type="Script" id=1]
[ext_resource path="res://addons/analog_controller/small_circle_DIRECTION_4.png" type="Texture" id=2]
[ext_resource path="res://addons/analog_controller/big_circle_DIRECTION_8.png" type="Texture" id=3]
[ext_resource path="res://assets/arrow_left.png" type="Texture" id=4]
[ext_resource path="res://assets/arrow_right.png" type="Texture" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://scripts/actor.gd" type="Script" id=7]
[ext_resource path="res://assets/font/PoetsenOne-Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="Environment" id=32]
ambient_light_color = Color( 0.823529, 0.823529, 0.823529, 1 )
ambient_light_sky_contribution = 0.0

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 50, 50 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.364706, 0.384314, 0.360784, 1 )

[sub_resource type="ConcavePolygonShape" id=6]
data = PoolVector3Array( 25, 0, 25, -25, 0, 25, 25, 0, -25, -25, 0, 25, -25, 0, -25, 25, 0, -25 )

[sub_resource type="CapsuleMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.0901961, 0.160784, 0.415686, 1 )
metallic_specular = 0.0

[sub_resource type="PrismMesh" id=7]
size = Vector3( 1, 1, 1 )

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.976471, 0.894118, 0, 1 )

[sub_resource type="CapsuleShape" id=5]

[sub_resource type="PlaneMesh" id=9]
size = Vector2( 2, 5 )

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0.490196, 0.662745, 0.141176, 1 )

[sub_resource type="ConcavePolygonShape" id=11]
data = PoolVector3Array( 1, 0, 2.5, -1, 0, 2.5, 1, 0, -2.5, -1, 0, 2.5, -1, 0, -2.5, 1, 0, -2.5 )

[sub_resource type="CubeMesh" id=12]

[sub_resource type="SpatialMaterial" id=13]
albedo_color = Color( 0.337255, 0.580392, 0.0705882, 1 )

[sub_resource type="ConcavePolygonShape" id=14]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="CubeMesh" id=15]

[sub_resource type="SpatialMaterial" id=16]
albedo_color = Color( 0.337255, 0.580392, 0.0705882, 1 )

[sub_resource type="ConcavePolygonShape" id=29]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="CubeMesh" id=17]

[sub_resource type="SpatialMaterial" id=18]
albedo_color = Color( 0.337255, 0.580392, 0.0705882, 1 )

[sub_resource type="ConcavePolygonShape" id=28]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="CubeMesh" id=19]

[sub_resource type="SpatialMaterial" id=20]
albedo_color = Color( 0.337255, 0.580392, 0.0705882, 1 )

[sub_resource type="ConcavePolygonShape" id=23]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="CubeMesh" id=21]

[sub_resource type="SpatialMaterial" id=22]
albedo_color = Color( 0.337255, 0.580392, 0.0705882, 1 )

[sub_resource type="ConcavePolygonShape" id=24]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="CubeMesh" id=25]

[sub_resource type="SpatialMaterial" id=26]
albedo_color = Color( 0.337255, 0.580392, 0.0705882, 1 )

[sub_resource type="ConcavePolygonShape" id=27]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="DynamicFont" id=30]
outline_color = Color( 0.0705882, 0.0666667, 0.0666667, 1 )
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=31]
default_font = SubResource( 30 )

[node name="Main" type="Spatial"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 32 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.712002, 0.702178, 0, -0.702178, 0.712002, 0, 7.38981, 4.44906 )
shadow_enabled = true
shadow_color = Color( 0.560784, 0.560784, 0.560784, 1 )
directional_shadow_depth_range = 1

[node name="Ground" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="Ground"]

[node name="CollisionShape" type="CollisionShape" parent="Ground/StaticBody"]
shape = SubResource( 6 )

[node name="Actor" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.804714, 0 )
script = ExtResource( 7 )

[node name="Spatial" type="Spatial" parent="Actor"]

[node name="Cam" type="Camera" parent="Actor/Spatial"]
transform = Transform( 1, 0, 0, 0, 0.973335, 0.229387, 0, -0.229387, 0.973335, 0, 2.35314, 2.32457 )
current = true

[node name="Body" type="MeshInstance" parent="Actor/Spatial"]
transform = Transform( 0.3, 0, 0, 0, -1.31134e-08, -0.3, 0, 0.3, -1.31134e-08, 0, 0.603826, 0 )
mesh = SubResource( 3 )
skeleton = NodePath("../..")
material/0 = SubResource( 4 )

[node name="Arrow" type="MeshInstance" parent="Actor/Spatial/Body"]
transform = Transform( 1, 0, 0, 0, -1, -4.04421e-08, 0, 5.39227e-08, -0.175206, 0, -2.45168, -0.466251 )
cast_shadow = 0
mesh = SubResource( 7 )
skeleton = NodePath("../../..")
material/0 = SubResource( 8 )

[node name="CollisionShape" type="CollisionShape" parent="Actor"]
transform = Transform( 0.4, 0, 0, 0, -1.74846e-08, -0.4, 0, 0.4, -1.74846e-08, 0, 0.603826, 0 )
shape = SubResource( 5 )

[node name="Obstacles" type="Spatial" parent="."]

[node name="MeshInstance2" type="MeshInstance" parent="Obstacles"]
transform = Transform( 1, 0, 0, 0, 0.738596, -0.674148, 0, 0.674148, 0.738596, 0, 0.639666, -7.30972 )
mesh = SubResource( 9 )
skeleton = NodePath("../..")
material/0 = SubResource( 10 )

[node name="StaticBody" type="StaticBody" parent="Obstacles/MeshInstance2"]

[node name="CollisionShape" type="CollisionShape" parent="Obstacles/MeshInstance2/StaticBody"]
shape = SubResource( 11 )

[node name="MeshInstance3" type="MeshInstance" parent="Obstacles"]
transform = Transform( 1, 0, 0, 0, 1.1668, 0, 0, 0, 3.68292, 0, 1.14328, -12.8736 )
mesh = SubResource( 12 )
skeleton = NodePath("../..")
material/0 = SubResource( 13 )

[node name="StaticBody" type="StaticBody" parent="Obstacles/MeshInstance3"]

[node name="CollisionShape" type="CollisionShape" parent="Obstacles/MeshInstance3/StaticBody"]
shape = SubResource( 14 )

[node name="MeshInstance4" type="MeshInstance" parent="Obstacles"]
transform = Transform( 0.666445, 0, 0, 0, 1.1668, 0, 0, 0, 0.755963, 2.85142, 1.14328, -12.8736 )
mesh = SubResource( 15 )
skeleton = NodePath("../..")
material/0 = SubResource( 16 )

[node name="StaticBody" type="StaticBody" parent="Obstacles/MeshInstance4"]

[node name="CollisionShape" type="CollisionShape" parent="Obstacles/MeshInstance4/StaticBody"]
shape = SubResource( 29 )

[node name="MeshInstance5" type="MeshInstance" parent="Obstacles"]
transform = Transform( 0.666445, 0, 0, 0, 1.70171, 0, 0, 0, 0.755963, 2.85142, 1.14328, -15.5276 )
mesh = SubResource( 17 )
skeleton = NodePath("../..")
material/0 = SubResource( 18 )

[node name="StaticBody" type="StaticBody" parent="Obstacles/MeshInstance5"]

[node name="CollisionShape" type="CollisionShape" parent="Obstacles/MeshInstance5/StaticBody"]
shape = SubResource( 28 )

[node name="MeshInstance6" type="MeshInstance" parent="Obstacles"]
transform = Transform( 0.666445, 0, 0, 0, 1.70171, 0, 0, 0, 0.755963, 5.45275, -0.17422, -15.5276 )
mesh = SubResource( 19 )
skeleton = NodePath("../..")
material/0 = SubResource( 20 )

[node name="StaticBody" type="StaticBody" parent="Obstacles/MeshInstance6"]

[node name="CollisionShape" type="CollisionShape" parent="Obstacles/MeshInstance6/StaticBody"]
shape = SubResource( 23 )

[node name="MeshInstance7" type="MeshInstance" parent="Obstacles"]
transform = Transform( 0.460889, 0, -0.546044, 0, 0.146887, 0, 0.481384, 0, 0.522796, 7.60702, 2.28112, -13.521 )
mesh = SubResource( 21 )
skeleton = NodePath("../..")
material/0 = SubResource( 22 )

[node name="StaticBody" type="StaticBody" parent="Obstacles/MeshInstance7"]

[node name="CollisionShape" type="CollisionShape" parent="Obstacles/MeshInstance7/StaticBody"]
shape = SubResource( 24 )

[node name="MeshInstance8" type="MeshInstance" parent="Obstacles"]
transform = Transform( 0.408027, 0.0683043, -0.483415, -0.33536, 0.125294, 0.104701, 0.406444, 0.0348107, 0.571688, 9.03997, 1.6148, -11.6382 )
mesh = SubResource( 25 )
skeleton = NodePath("../..")
material/0 = SubResource( 26 )

[node name="StaticBody" type="StaticBody" parent="Obstacles/MeshInstance8"]

[node name="CollisionShape" type="CollisionShape" parent="Obstacles/MeshInstance8/StaticBody"]
shape = SubResource( 27 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="AnalogController" type="Node2D" parent="HUD"]
position = Vector2( 96, 458 )
script = ExtResource( 1 )
typeAnalogic = 4
scaleBall = Vector2( 0.5, 0.5 )
bigBallTexture = ExtResource( 3 )
smallBallTexture = ExtResource( 2 )

[node name="Turn_Left" type="TouchScreenButton" parent="HUD"]
position = Vector2( 702, 421 )
normal = ExtResource( 4 )
passby_press = true

[node name="Turn_Right" type="TouchScreenButton" parent="HUD"]
position = Vector2( 776, 421 )
normal = ExtResource( 5 )
passby_press = true

[node name="Turn_Jump" type="TouchScreenButton" parent="HUD"]
position = Vector2( 850, 493 )
rotation = -1.5708
normal = ExtResource( 5 )
passby_press = true

[node name="bkg" type="ColorRect" parent="HUD"]
margin_right = 960.0
margin_bottom = 120.0
color = Color( 0.905882, 0.654902, 0.0823529, 1 )

[node name="icon" type="Sprite" parent="HUD/bkg"]
position = Vector2( 480, 59 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="ComputerInfo" type="Label" parent="HUD/bkg"]
margin_left = 22.0
margin_top = 23.0
margin_right = 266.0
margin_bottom = 89.0
theme = SubResource( 31 )
custom_colors/font_color = Color( 0.294118, 0.211765, 0.211765, 1 )
text = "On Computer: 
- Press ESC to Analogic mode
- Press ENTER to keyboard mode"

[connection signal="analogChange" from="HUD/AnalogController" to="Actor" method="_on_AnalogController_analogChange"]
[connection signal="analogPressed" from="HUD/AnalogController" to="Actor" method="_on_AnalogController_analogPressed"]
[connection signal="analogRelease" from="HUD/AnalogController" to="Actor" method="_on_AnalogController_analogRelease"]
[connection signal="pressed" from="HUD/Turn_Left" to="Actor" method="_on_Turn_Left_pressed"]
[connection signal="released" from="HUD/Turn_Left" to="Actor" method="_on_Turn_released"]
[connection signal="pressed" from="HUD/Turn_Right" to="Actor" method="_on_Tur_Right_pressed"]
[connection signal="released" from="HUD/Turn_Right" to="Actor" method="_on_Turn_released"]
[connection signal="pressed" from="HUD/Turn_Jump" to="Actor" method="_on_Turn_Jump_pressed"]
[connection signal="released" from="HUD/Turn_Jump" to="Actor" method="_on_Turn_released"]
